--- a/style.css
+++ b/style.css
@@ -53,5 +53,7 @@
     width: 500px;
     height: 400px;
     border: 2px solid black;
+    grid-template-columns: 16;
+    grid-template-rows: 16;
 
 }
